# miniz-cpp

./: CMakeLists.txt
cmake/: miniz-cppConfig.cmake.in
examples/: pipe.cpp  read.cpp  write.cpp
tests/: test.cpp
